# Edge-AI-Genesis-2026

./: .gitignore  README.md  README_v1.md  test.md
01_Linux_CPP_Foundations/memory_safety/: CMakeLists.txt  main.cpp  notes.md  safe_tensor_buffer.hpp
01_Linux_CPP_Foundations/move_semantics/: benchmark_move_vs_copy.cpp  custom_image.hpp
01_Linux_CPP_Foundations/w1_memory_safety/: notes.md
01_Linux_CPP_Foundations/w2_move_semantics/: CMakeLists.txt  notes.md
01_Linux_CPP_Foundations/w3_filesystem/: CMakeLists.txt  model_scanner.cpp  notes.md
01_Linux_CPP_Foundations/w4_threading/: CMakeLists.txt  notes.md  producer_consumer.cpp
01_Linux_CPP_Foundations/w5_thread_pool/: CMakeLists.txt  notes.md  thread_pool.hpp  thread_pool_test.cpp
docs/: Q1.md
